--- a/app/resources/styles.css
+++ b/app/resources/styles.css
@@ -66,3 +66,9 @@ h1 {
     transform-origin: left;
     transition: transform 0.1s linear;
 } 
+
+#square {
+    width: 100px;
+    height: 100px;
+    background-color: #051409;
+}
