--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,11 +31,9 @@
                 <strong>SECRETS_MANAGER_PARAMETER:</strong>
                 <span class="env-value" id="secrets_manager_parameter">{{ secrets_manager_parameter }}</span>
             </div>
-            <div class="env-item">
-                <strong>CONFIG:</strong>
-                <span class="env-value" id="config">{{ config }}</span>
-            </div>
         </div>
+
+        <div id="square"></div>
 
         <script src="{{ url_for('static', path='/app.js') }}"></script>
     </body>
