Let the app show all the values and retrieve FF

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,6 +31,16 @@
                 <strong>SECRETS_MANAGER_PARAMETER:</strong>
                 <span class="env-value" id="secrets_manager_parameter">{{ secrets_manager_parameter }}</span>
             </div>
+
+            <div class="env-item">
+                <strong>background:</strong>
+                <span class="env-value" id="background">{{ background }}</span>
+            </div>
+
+            <div class="env-item">
+                <strong>ff_rotate:</strong>
+                <span class="env-value" id="ff_rotate">{{ ff_rotate }}</span>
+            </div>
         </div>
 
         <div id="square"></div>
