--- a/app/resources/styles.css
+++ b/app/resources/styles.css
@@ -72,3 +72,17 @@ h1 {
     height: 100px;
     background-color: #051409;
 }
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.rotating {
+    animation: rotate 10s linear infinite;
+    transform-origin: center;
+}
