Fix feature flags usage. The returned value is a dictionary actually

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,6 +41,11 @@
                 <strong>ff_rotate:</strong>
                 <span class="env-value" id="ff_rotate">{{ ff_rotate }}</span>
             </div>
+            
+            <div class="env-item">
+                <strong>ff_rotate.speed:</strong>
+                <span class="env-value" id="ff_rotate_speed">{{ ff_rotate_speed }}</span>
+            </div>
         </div>
 
         <div id="square"></div>
